# FYP-Legged-Robot

./: .gitignore  README.md
Archive/: model_exported.sdf  model_fixed_joint_axes_orientations.sdf  model_sw_inertia.sdf
Archive/ADC data/: adc_calibration_log_1.csv  adc_calibration_log_2.csv  adc_calibration_log_3.csv  adc_calibration_log_4.csv  adc_calibration_log_5.csv  adc_calibration_log_6.csv  adc_calibration_log_pcb_1.csv  adc_calibration_log_pcb_2.csv  adc_calibration_log_pcb_3.csv  determine_mapping.py  feedback_test.py  plot_adc_data.py  plot_filtered_adc.py  test_calibration_and_filter.py
Archive/CaveGenOutput/: data.json  mesh.mtl
Archive/Collision Mesh Validation/: joint_commands_vs_states_FL_collision_walking.csv  joint_data_simplified_suspended.csv  joint_torques_FL_collision_walking.csv  torque_data_actual_suspended.csv  torque_data_simplified_suspended.csv
CSReport/: approval.tex  references.bib  report.tex  titlepage.tex
Code/: collision_mesh_validation.py  collision_mesh_validation_1.py  collision_mesh_validation_2.py  kinematics.py  legWorkspace.m  payloadAnalysisPSO.py  quadGait.m  quadModel.m  servoVoltage.m  sim_robot.sh  symsKinematics.m  torqueAnalysis.py  walk.py
Code/ROS/src/quad_interface/: CMakeLists.txt  package.xml  quad_interface.xml
Code/ROS/src/quad_interface/config/: calibration.yaml
Code/ROS/src/quad_interface/include/quad_interface/: quad_interface.hpp
Code/ROS/src/quad_interface/src/: quad_interface.cpp
Demos/: MeshCollisionTest.mkv
Environments/: FlatTrials.sdf  RobotInACave.sdf  RobotTube.sdf
(+606 files in other folders)
